--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,6 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  delete:
+    branches: [ "main" ]
+
 
 jobs:
   build:
@@ -28,8 +31,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest
+        python -m pip install pytest coverage
         pip install .
-    - name: Test with pytest
-      run: |
-        pytest
+    - name: Test with pytest, via coverage
+      run: coverage run -m pytest
+    - name: Upload coverage report to Codecov
+      uses: codecov/codecov-action@v3
