--- a/.github/workflows/workflow-pytest.yml
+++ b/.github/workflows/workflow-pytest.yml
@@ -1,5 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# This workflow will install Python dependencies and run tests with a variety of Python versions
 
 name: Python package
 
@@ -28,12 +27,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest coverage
+        python -m pip install pytest
         pip install .
-    - name: Test with pytest, via coverage
-      run: coverage run -m pytest
-    - name: Upload coverage report to Codecov
-      uses: codecov/codecov-action@v3
+        
+    - name: Test with pytest
+      run: |
+        pytest
