--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "NOrbit"
-dynamic = ["version"]
+dynamic = "1.0.1"
 authors = [
     {name = "Lukas Orion", email = "a11919257@unet.univie.ac.at"},
     {name = "Jim Buisman", email = "a01625563@unet.univie.ac.at"}
@@ -27,6 +27,3 @@ plot = [
 Homepage = "https://github.com/Lukas-Orion/NOrbit"
 Repository = "https://github.com/Lukas-Orion/NOrbit"
 "Bug Tracker" = "https://github.com/Lukas-Orion/NOrbit/issues"
-
-[tool.setuptools.dynamic]
-version = {attr = "NOrbit.__version__"}
